# CS50_Python

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml  security.yml
docs/security/: data-protection.md  incident-response.md  logging-alerting.md  secure-coding.md  sql-postgres-guidance.md  threat-model.md
